<resources>
    <string name="app_name">ShowWeather</string>
    <string name="forecast_data_name">Forecast</string>

    <string name="st_paul_mn">St. Paul, MN</string>

    <!-- String for Current Conditions -->
    <string name="temperature">%1$d°</string>
    <string name="feels_like">Feels like %1$d°</string>
    <string name="low">Low %1$d°</string>
    <string name="high">High %1$d°</string>
    <string name="humidity">Humidity %1$d%%</string>
    <string name="pressure">Pressure %1$d hPa</string>

    <!-- String for Button -->
    <string name="forecast">Forecast</string>

    <!-- String for 16 Day Forecast -->
    <string name="temp">Temp: %1$d°</string>
    <string name="max">High: %1$d°</string>
    <string name="min">Low: %1$d°</string>
    <string name="sunrise">Sunrise: %1$s:%2$sam</string>
    <string name="sunset">Sunset: %1$s:%2$spm</string>

    <!-- String for Search -->
    <string name="enter_a_zip_code">Enter a ZIP code</string>
    <string name="search">Search</string>
    <string name="zip_code">ZIP Code</string>
    <string name="notifications_on">Turn on notifications</string>
    <string name="notifications_off">Turn off notifications</string>

    <!-- String for Error Dialog -->
    <string name="ok">Ok</string>
    <string name="request_location">Current Location</string>

    <string name="location_permission_rationale">Location is unavailable because the
        features requires a permission. \n\nTo Allow Permission, go to
        Settings > Apps > ShowWeather > Permissions > Location, then choose you options.</string>
    <string name="location_permission_rationale_button">Ok</string>

    <!-- String for showLocationNotFoundDialog() -->
    <string name="location_not_found">If Location is Not Found,
        open Google Maps and press blue dot for you location.</string>
    <string name="location_not_found_button">Ok</string>



</resources>